src/include/musicxx_extern_plugin_api.h

/* ==================== 钩子派发标志 ==================== */

#define MUSICXX_EXTERN_PLUGIN_HOOK_SYNC  1 ///< 等待处理器链结果 (有等待预算)
#define MUSICXX_EXTERN_PLUGIN_HOOK_ASYNC 0 ///< 入队即返回
/* ==================== 跨边界字符串 ==================== */

/// 只读借用字符串视图 (指向调用方内存, UTF-8, 不要求 NUL 结尾)
typedef struct MusicxxExternPluginStringView {
    const char* data;
    uint64_t    size;
} MusicxxExternPluginStringView;
/// 宿主堆分配字符串 (显式所有权: 由宿主分配, 调用方用 string_free 释放)
typedef struct MusicxxExternPluginString {
    char*    data; ///< 以 \0 结尾; 空串或未设置时为 NULL
    uint64_t size; ///< 字节数 (不含结尾 \0)
} MusicxxExternPluginString;
/// 宿主句柄 (不透明; 进程内单例)
typedef struct MusicxxExternPluginHost MusicxxExternPluginHost;
/// 调用插件能力 (Dart → 插件; 同步带超时)
/// - native/JS 插件统一用 `plugin.<pluginId>.<能力名>`
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL musicxx_extern_plugin_plugin_call(
    MusicxxExternPluginHost*              h,
    const MusicxxExternPluginStringView* id,
    const MusicxxExternPluginStringView* method,
    const MusicxxExternPluginStringView* args_json,
    uint32_t                              timeout_ms,
    MusicxxExternPluginString*           out_json,
    MusicxxExternPluginString*           log
);
/* ==================== 钩子 ==================== */

/// 派发钩子
/// - `flags` = MUSICXX_EXTERN_PLUGIN_HOOK_SYNC 时等待处理器链 (预算内) 并输出合并结果;
///   MUSICXX_EXTERN_PLUGIN_HOOK_ASYNC 时入队即返回
/// - 裁决型钩子在 ASYNC 模式下为"异步裁决": 立即返回 `{"handled":true,"async":true,"callId":N}`,
///   处理器链跑完后由事件 `musicxx.hook.decision.result` 回传结果 (payload 含同一个 callId,
///   以及 result/timedOut/called/handlers 字段); 观察型钩子的 ASYNC 派发不回报结果
/// - out_json 形如 {"handled":true,"result":{...},"timedOut":false,"handlers":2}
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_hook_emit(
        MusicxxExternPluginHost*              h,
        const MusicxxExternPluginStringView* hook_id,
        const MusicxxExternPluginStringView* input_json,
        int32_t                               flags,
        uint32_t                              timeout_ms,
        MusicxxExternPluginString*           out_json,
        MusicxxExternPluginString*           log
    );
/// 该钩子当前的原生/JS 处理器数量 (Dart 快速路径判定; 事件增量更新)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_hook_count(
        MusicxxExternPluginHost*              h,
        const MusicxxExternPluginStringView* hook_id,
        int32_t*                              out_count,
        MusicxxExternPluginString*           log
    );
/// 钩子耗时/超时/失败统计 (调试页)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_hook_stats(
        MusicxxExternPluginHost*    h,
        MusicxxExternPluginString* out_json,
        MusicxxExternPluginString* log
    );
/* ==================== 动作请求 (插件 → Dart) ==================== */

/// 回复插件发起的动作请求 (status 见错误码; result_json 可为空)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_action_respond(
        MusicxxExternPluginHost*              h,
        int64_t                               request_id,
        int32_t                               status,
        const MusicxxExternPluginStringView* result_json,
        MusicxxExternPluginString*           log
    );
/* ==================== 状态镜像 (Dart → 原生) ==================== */

/// 推送单个状态键 (值必须为合法 JSON; 单键上限 64 KiB, 超出截断并告警)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_state_update(
        MusicxxExternPluginHost*              h,
        const MusicxxExternPluginStringView* key,
        const MusicxxExternPluginStringView* value_json,
        MusicxxExternPluginString*           log
    );
/// 批量推送状态键: [{"key":"...","value":{...}}, ...]
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_state_update_batch(
        MusicxxExternPluginHost*              h,
        const MusicxxExternPluginStringView* items_json,
        MusicxxExternPluginString*           log
    );
/* ==================== UI / 日志 / 调试 / 统计 ==================== */

/// 插件贡献的 UI 项快照 (JSON 数组; 变更另有 musicxx.ui.changed 事件)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_ui_snapshot(
        MusicxxExternPluginHost*    h,
        MusicxxExternPluginString* out_json,
        MusicxxExternPluginString* log
    );
/// Dart → 原生日志 (统一落盘/转发; level: 0 trace .. 4 error)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL musicxx_extern_plugin_log(
    MusicxxExternPluginHost*              h,
    int32_t                               level,
    const MusicxxExternPluginStringView* message,
    MusicxxExternPluginString*           log
);
/// 调试信息 (版本/依赖/平台/插件统计; 支持页复制)
MUSICXX_EXTERN_PLUGIN_EXPORT int32_t MUSICXX_EXTERN_PLUGIN_CALL
    musicxx_extern_plugin_debug_info(
        MusicxxExternPluginHost*    h,
        MusicxxExternPluginString* out_json,
        MusicxxExternPluginString* log
    );