lib/src/bindings_generated.dart


  /// 调用插件能力 (Dart → 插件; 同步带超时)
  /// - native/JS 插件统一用 `plugin.<pluginId>.<能力名>`
  int musicxx_extern_plugin_plugin_call(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> id,
    ffi.Pointer<MusicxxExternPluginStringView> method,
    ffi.Pointer<MusicxxExternPluginStringView> args_json,
    int timeout_ms,
    ffi.Pointer<MusicxxExternPluginString> out_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_plugin_call(
      h,
      id,
      method,
      args_json,
      timeout_ms,
      out_json,
      log,
    );
  }

  late final _musicxx_extern_plugin_plugin_callPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Uint32,
            ffi.Pointer<MusicxxExternPluginString>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_plugin_call');
  late final _musicxx_extern_plugin_plugin_call =
      _musicxx_extern_plugin_plugin_callPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              int,
              ffi.Pointer<MusicxxExternPluginString>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 派发钩子
  /// - `flags` = MUSICXX_EXTERN_PLUGIN_HOOK_SYNC 时等待处理器链 (预算内) 并输出合并结果;
  /// MUSICXX_EXTERN_PLUGIN_HOOK_ASYNC 时入队即返回 (out_json 为 {"handled":bool})
  /// - out_json 形如 {"handled":true,"result":{...},"timedOut":false,"handlers":2}
  int musicxx_extern_plugin_hook_emit(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> hook_id,
    ffi.Pointer<MusicxxExternPluginStringView> input_json,
    int flags,
    int timeout_ms,
    ffi.Pointer<MusicxxExternPluginString> out_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_hook_emit(
      h,
      hook_id,
      input_json,
      flags,
      timeout_ms,
      out_json,
      log,
    );
  }

  late final _musicxx_extern_plugin_hook_emitPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Int32,
            ffi.Uint32,
            ffi.Pointer<MusicxxExternPluginString>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_hook_emit');
  late final _musicxx_extern_plugin_hook_emit =
      _musicxx_extern_plugin_hook_emitPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              int,
              int,
              ffi.Pointer<MusicxxExternPluginString>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 该钩子当前的原生/JS 处理器数量 (Dart 快速路径判定; 事件增量更新)
  int musicxx_extern_plugin_hook_count(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> hook_id,
    ffi.Pointer<ffi.Int32> out_count,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_hook_count(h, hook_id, out_count, log);
  }

  late final _musicxx_extern_plugin_hook_countPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<ffi.Int32>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_hook_count');
  late final _musicxx_extern_plugin_hook_count =
      _musicxx_extern_plugin_hook_countPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 钩子耗时/超时/失败统计 (调试页)
  int musicxx_extern_plugin_hook_stats(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginString> out_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_hook_stats(h, out_json, log);
  }

  late final _musicxx_extern_plugin_hook_statsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginString>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_hook_stats');
  late final _musicxx_extern_plugin_hook_stats =
      _musicxx_extern_plugin_hook_statsPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginString>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 回复插件发起的动作请求 (status 见错误码; result_json 可为空)
  int musicxx_extern_plugin_action_respond(
    ffi.Pointer<MusicxxExternPluginHost> h,
    int request_id,
    int status,
    ffi.Pointer<MusicxxExternPluginStringView> result_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_action_respond(
      h,
      request_id,
      status,
      result_json,
      log,
    );
  }

  late final _musicxx_extern_plugin_action_respondPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Int64,
            ffi.Int32,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_action_respond');
  late final _musicxx_extern_plugin_action_respond =
      _musicxx_extern_plugin_action_respondPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              int,
              int,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 推送单个状态键 (值必须为合法 JSON; 单键上限 64 KiB, 超出截断并告警)
  int musicxx_extern_plugin_state_update(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> key,
    ffi.Pointer<MusicxxExternPluginStringView> value_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_state_update(h, key, value_json, log);
  }

  late final _musicxx_extern_plugin_state_updatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_state_update');
  late final _musicxx_extern_plugin_state_update =
      _musicxx_extern_plugin_state_updatePtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 批量推送状态键: [{"key":"...","value":{...}}, ...]
  int musicxx_extern_plugin_state_update_batch(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginStringView> items_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_state_update_batch(h, items_json, log);
  }

  late final _musicxx_extern_plugin_state_update_batchPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_state_update_batch');
  late final _musicxx_extern_plugin_state_update_batch =
      _musicxx_extern_plugin_state_update_batchPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginStringView>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// 插件贡献的 UI 项快照 (JSON 数组; 变更另有 musicxx.ui.changed 事件)
  int musicxx_extern_plugin_ui_snapshot(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginString> out_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_ui_snapshot(h, out_json, log);
  }

  late final _musicxx_extern_plugin_ui_snapshotPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginString>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_ui_snapshot');
  late final _musicxx_extern_plugin_ui_snapshot =
      _musicxx_extern_plugin_ui_snapshotPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginString>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();

  /// Dart → 原生日志 (统一落盘/转发; level: 0 trace .. 4 error)
  int musicxx_extern_plugin_log(
    ffi.Pointer<MusicxxExternPluginHost> h,
    int level,
    ffi.Pointer<MusicxxExternPluginStringView> message,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_log(h, level, message, log);
  }

  late final _musicxx_extern_plugin_logPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Int32,
            ffi.Pointer<MusicxxExternPluginStringView>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_log');
  late final _musicxx_extern_plugin_log = _musicxx_extern_plugin_logPtr
      .asFunction<
        int Function(
          ffi.Pointer<MusicxxExternPluginHost>,
          int,
          ffi.Pointer<MusicxxExternPluginStringView>,
          ffi.Pointer<MusicxxExternPluginString>,
        )
      >();

  /// 调试信息 (版本/依赖/平台/插件统计; 支持页复制)
  int musicxx_extern_plugin_debug_info(
    ffi.Pointer<MusicxxExternPluginHost> h,
    ffi.Pointer<MusicxxExternPluginString> out_json,
    ffi.Pointer<MusicxxExternPluginString> log,
  ) {
    return _musicxx_extern_plugin_debug_info(h, out_json, log);
  }

  late final _musicxx_extern_plugin_debug_infoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<MusicxxExternPluginHost>,
            ffi.Pointer<MusicxxExternPluginString>,
            ffi.Pointer<MusicxxExternPluginString>,
          )
        >
      >('musicxx_extern_plugin_debug_info');
  late final _musicxx_extern_plugin_debug_info =
      _musicxx_extern_plugin_debug_infoPtr
          .asFunction<
            int Function(
              ffi.Pointer<MusicxxExternPluginHost>,
              ffi.Pointer<MusicxxExternPluginString>,
              ffi.Pointer<MusicxxExternPluginString>,
            )
          >();
